--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8081
+spring.datasource.url=jdbc:h2:mem:crud-spring-courses-list
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=SA
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+#http://localhost:8080/h2-console/
+
+server.error.include-stacktrace=never
+server.error.include-message=never
